fixed menu button spacing

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -91,7 +91,7 @@ nav {
 #menu_button {
   z-index: 1000;
   top: 1rem;
-  right: 1.5rem;
+  right: 1.7rem;
   position: absolute;
   display: flex;
   justify-content: center;
